# BagFromImages_TUM

./: CMakeLists.txt  README.md  associations_illumi_no.txt  main.cpp
